platform/services/keycloak/overlays/dev/watch-namespace-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-operator
spec:
  template:
    spec:
      containers:
        - name: keycloak-operator
