platform/services/keycloak/overlays/dev/ingress-private.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak-system
  annotations:
    cert-manager.io/cluster-issuer: step-ca-int-acme
    external-dns.alpha.kubernetes.io/hostname: sso-dev.int.aethericforge.ca
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx-private

  tls:
    - hosts:
        - sso-dev.int.aethericforge.ca
      secretName: keycloak-tls

  rules:
    - host: sso-dev.int.aethericforge.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forge-keycloak-service
                port:
                  name: https
